--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
   <div class="container">
-    <h1 class="display-3">Welcome!</h1>
+    <h1 class="display-3">Welcome! 💃</h1>
     <p>This is where you setup and monitor the British Vogue Facebook Messenger Runway bot.</p>
   </div>
 </div>
