data points home page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,17 +12,17 @@
     <div class="col-md-4">
       <h2>Configure</h2>
       <p>Create and edit questions and other messaging text here.</p>
-      <p><%= link_to "View details", questions_path, class: "btn btn-secondary", role: "button" %></p>
+      <p><%= link_to "Go", questions_path, class: "btn btn-secondary", role: "button" %></p>
     </div>
     <div class="col-md-4">
       <h2>Broadcast</h2>
       <p>Got something to say to all of our Facebook users? Write a message to them.</p>
-      <p><%= link_to "View details", broadcasts_path, class: "btn btn-secondary", role: "button" %></p>
+      <p><%= link_to "Go", broadcasts_path, class: "btn btn-secondary", role: "button" %></p>
     </div>
     <div class="col-md-4">
       <h2>Status</h2>
       <p>How many people have talked to the bot? What messages have we sent or received? All that info is here.</p>
-      <p><%= link_to "View details", sent_messages_path, class: "btn btn-secondary", role: "button" %></p>
+      <p><%= link_to "View", sent_messages_path, class: "btn btn-secondary", role: "button" %></p>
     </div>
   </div>
 
