Display notice info

--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -5,6 +5,7 @@
     </div>
   </div>
   <div class="row">
+    <p id="notice"><%= notice %></p>
 
     <%= render 'form', question: @question %>
   </div>
