Redirect back on answers being updated

--- a/app/views/possible_answers/show.html.erb
+++ b/app/views/possible_answers/show.html.erb
@@ -11,13 +11,13 @@
 </p>
 
 <p>
-  <strong>Type:</strong>
-  <%= @possible_answer.type %>
+  <strong>Category:</strong>
+  <%= @possible_answer.category %>
 </p>
 
 <p>
-  <strong>Order:</strong>
-  <%= @possible_answer.order %>
+  <strong>Sort Order:</strong>
+  <%= @possible_answer.sort_order %>
 </p>
 
 <%= link_to 'Edit', edit_possible_answer_path(@possible_answer) %> |
