--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -5,6 +5,8 @@
       <h1>Brands</h1>
     </div>
 
+  <%= paginate @brands %>
+
 <table class="table">
   <thead>
     <tr>
@@ -26,5 +28,6 @@
     <% end %>
   </tbody>
 </table>
+  <%= paginate @brands %>
   </div>
 </div>
