--- a/app/views/shows/edit.html.erb
+++ b/app/views/shows/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing Show</h1>
+<div class="container" style="margin-top: 70px">
+  <div class="row">
 
-<%= render 'form', show: @show %>
+    <div class="page-header">
+      <h1>Editing Show</h1>
+    </div>
 
-<%= link_to 'Show', @show %> |
-<%= link_to 'Back', shows_path %>
+  </div>
+
+  <div class="row">
+    <p id="notice"><%= notice %></p>
+  </div>
+
+  <div class="row">
+      <%= render 'form', show: @show %>
+  </div>
+</div>
