--- a/app/views/shows/index.html.erb
+++ b/app/views/shows/index.html.erb
@@ -1,25 +1,34 @@
-<p id="notice"><%= notice %></p>
+<div class="container" style="margin-top: 70px">
+  <div class="row">
 
-<h1>Shows</h1>
+    <div class="page-header">
+      <h1>Shows</h1>
+    </div>
 
-<table>
+    <p id="notice"><%= notice %></p>
+
+  <%= paginate @shows %>
+    
+<table class="table">
   <thead>
     <tr>
-      <th colspan="3"></th>
+      <th>Title</th>
+      <th>Brand</th>
+      <th></th>
     </tr>
   </thead>
 
   <tbody>
     <% @shows.each do |show| %>
       <tr>
-        <td><%= link_to 'Show', show %></td>
-        <td><%= link_to 'Edit', edit_show_path(show) %></td>
-        <td><%= link_to 'Destroy', show, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to show.title, edit_show_path(show) %></td>
+        <td><%= link_to show.brand.title, brand_path(show.brand) %></td>
+        <td><%= link_to 'Delete', show, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Show', new_show_path %>
+  <%= paginate @shows %>
+  </div>
+</div>
