Fixed new question button

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row">
-    <%= button_to 'New Question', new_question_path, class: "btn btn-success pull-right" %>
+    <%= link_to 'New Question', new_question_path, class: "btn btn-success pull-right" %>
     <table class="table">
       <thead>
         <tr>
