--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,25 +4,31 @@
   <h1>Articles</h1>
 </div>
 
+<%= paginate @articles %>
+
 <table class="table">
   <thead>
     <tr>
       <th>Title</th>
       <th>Url</th>
       <th>Publish time</th>
+      <th></th>
     </tr>
   </thead>
 
   <tbody>
     <% @articles.each do |article| %>
       <tr>
-        <td><%= link_to article.title, article %></td>
+        <td><%= link_to article.title, edit_article_path(article) %></td>
         <td><%= article.url %></td>
         <td><%= article.publish_time %></td>
+        <td><%= article.publish_time %></td>
+        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
+<%= paginate @articles %>
   </div>
 </div>
