--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
 
     <div class="page-header">
-      <h1>Brands <small><%= Brand.count %></small></h1>
+      <h1>Brands <small>(<%= Brand.count %>)</small></h1>
     </div>
 
   <%= paginate @brands %>
