--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
 
     <div class="page-header">
-      <h1>Received Messages <small><%= Message.count %></small></h1>
+      <h1>Received Messages <small>(<%= Message.count %>)</small></h1>
     </div>
 
   <%= paginate @messages %>
