--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -11,7 +11,8 @@
   <thead>
     <tr>
       <th>ID</th>
-      <th>Name</th>
+      <th>Unmatched Brand?</th>
+      <th>User</th>
       <th>Text</th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
     <% @messages.each do |message| %>
       <tr>
         <td><%= link_to message.id, message %></td>
+        <td><%= message.unmatched_brand %></td>
         <td><%= message.user.present? ? message.user.name : message.senderid %></td>
         <td><%= message.text %></td>
       </tr>
