--- a/app/views/contents/_form.html.erb
+++ b/app/views/contents/_form.html.erb
@@ -11,22 +11,22 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group col-12">
     <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: "form-control form-control-lg" %>
   </div>
 
-  <div class="field">
+  <div class="form-group col-12">
     <%= f.label :label %>
-    <%= f.text_field :label %>
+    <%= f.text_field :label, class: "form-control form-control-lg" %>
   </div>
 
-  <div class="field">
+  <div class="form-group col-12">
     <%= f.label :body %>
-    <%= f.text_area :body %>
+    <%= f.text_area :body, class: "form-control form-control-lg", rows: 5 %>
   </div>
 
-  <div class="actions">
+  <div class="form-group">
     <%= f.submit %>
   </div>
 <% end %>
