--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -27,9 +27,9 @@
     <%= f.select :type, Question::VALID_TYPES, class: "form-control" %>
   </div>
 
-  <div class="form-group">
+  <div class="form-group col-12">
     <%= f.label :text %>
-    <%= f.text_area :text, class: "form-control" %>
+    <%= f.text_area :text, class: "form-control form-control-lg", rows: 5 %>
   </div>
 
   <hr>
