Sortable shows list with link to live uk site

--- a/app/views/shows/index.html.erb
+++ b/app/views/shows/index.html.erb
@@ -3,34 +3,35 @@
 
     <div class="page-header">
       <h1>Shows <small>(<%= @shows.total_count %>)</small></h1>
+      <span class="pull-md-right"><a target="_new" href="http://www.vogue.co.uk/shows">vogue.co.uk/shows</a></span>
     </div>
 
     <p id="notice"><%= notice %></p>
 
-  <%= paginate @shows %>
-    
-<table class="table">
-  <thead>
-    <tr>
-      <th><%= link_to "Title", shows_path(sort_by: "title", dir: @sort_by == 'title' && @dir == 'DESC' ? 'ASC' : 'DESC') %></th>
-      <th><%= link_to "Brand", shows_path(sort_by: "brand.title", dir: @sort_by == 'brand.title' && @dir == 'DESC' ? 'ASC' : 'DESC') %></th>
-      <th><%= link_to "Date", shows_path(sort_by: "date_time", dir: @sort_by == 'date_time' && @dir == 'DESC' ? 'ASC' : 'DESC') %></th>
-      <th></th>
-    </tr>
-  </thead>
+    <%= paginate @shows %>
 
-  <tbody>
-    <% @shows.each do |show| %>
-      <tr>
-        <td><%= link_to show.title, edit_show_path(show) %></td>
-        <td><%= link_to show.brand.title, brand_path(show.brand) %></td>
-        <td><%= show.date_time %></td>
-        <td><%= link_to 'Delete', show, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <table class="table">
+      <thead>
+        <tr>
+          <th><%= link_to "Title", shows_path(sort_by: "title", dir: @sort_by == 'title' && @dir == 'DESC' ? 'ASC' : 'DESC') %></th>
+          <th><%= link_to "Brand", shows_path(sort_by: "brand.title", dir: @sort_by == 'brand.title' && @dir == 'DESC' ? 'ASC' : 'DESC') %></th>
+          <th><%= link_to "Date", shows_path(sort_by: "date_time", dir: @sort_by == 'date_time' && @dir == 'DESC' ? 'ASC' : 'DESC') %></th>
+          <th></th>
+        </tr>
+      </thead>
 
-  <%= paginate @shows %>
+      <tbody>
+        <% @shows.each do |show| %>
+          <tr>
+            <td><%= link_to show.title, edit_show_path(show) %></td>
+            <td><%= link_to show.brand.title, brand_path(show.brand) %></td>
+            <td><%= show.date_time %></td>
+            <td><%= link_to 'Delete', show, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+
+    <%= paginate @shows %>
   </div>
 </div>
