--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -1,26 +1,32 @@
 <div class="container" style="margin-top: 70px">
-  <div class="row">
+  <div class="row d-flex justify-content-between bd-highlight mb-3">
     <div class="page-header">
-      <h1>Edit Message Contents</h1>
+      <h1>Inputs & Outputs</h1>
     </div>
-    
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>Label</th>
-      </tr>
-    </thead>
+    <div class="p-2"><%= link_to 'Go to Bot Prompts', questions_path, class: 'btn btn-outline-primary' %></div>
+  </div>
 
-    <tbody>
-      <% @contents.each do |content| %>
+  <div class="row">
+    <%= paginate @contents %>
+    <table class="table">
+      <thead>
         <tr>
-          <td><%= link_to content.title, edit_content_path(content) %></td>
-          <td><%= content.label %></td>
+          <th>Input (when someone says this...)</th>
+          <th>Output (... the bot responds with that.)</th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
+      </thead>
 
+      <tbody>
+        <% @contents.each do |content| %>
+          <tr>
+            <td><%= link_to content.title, edit_content_path(content) %></td>
+            <td><%= link_to content.body, edit_content_path(content) %></td>
+            <td><%= link_to 'Delete', content, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <%= paginate @contents %>
+    <%= link_to 'Add an input/output', new_content_path, class: "btn btn-outline-success pull-right" %>
   </div>
 </div>
