--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,13 +1,22 @@
 <div class="container" style="margin-top: 70px">
   <div class="row">
 
+  <div class="row d-flex justify-content-between bd-highlight mb-3">
     <div class="page-header">
-      <% if params[:unmatched] %>
-        <h1>Unrecognised Brands <small>(<%= Message.count %>)</small></h1>
-      <% else %>
-        <h1>Received Messages <small>(<%= Message.count %>)</small></h1>
+      <% if @message_type == "unrecognised" %>
+        <h1>Unrecognised Messages <small>(<%= @messages.size %>)</small></h1>
+      <% elsif @message_type == "sent" %>
+        <h1>Messages: Outgoing <small>(<%= @messages.size %>)</small></h1>
+      <% elsif @message_type == "incoming" || !@message_type %>
+        <h1>Messages: Incoming <small>(<%= @messages.size %>)</small></h1>
       <% end %>
     </div>
+    <div class="p-2">
+      <%= link_to 'Incoming', messages_path(type: "incoming"), class: 'btn btn-outline-primary' if @message_type != 'incoming'%>
+      <%= link_to 'Outgoing', messages_path(type: "sent"), class: 'btn btn-outline-warning' if @message_type != 'sent' %>
+      <%= link_to 'Unrecognised', messages_path(type: "unrecognised"), class: 'btn btn-outline-danger' if @message_type != 'unrecognised' %>
+    </div>
+  </div>
 
     <%= paginate @messages %>
 
@@ -15,9 +24,11 @@
       <thead>
         <tr>
           <th>ID</th>
-          <th>Unrecognised Brand?</th>
           <th>User</th>
           <th>Text</th>
+          <% unless @message_type == 'unrecognised' %>
+            <th>?</th>
+          <% end %>
         </tr>
       </thead>
 
@@ -25,9 +36,11 @@
         <% @messages.each do |message| %>
           <tr>
             <td><%= link_to message.id, message %></td>
-            <td><%= message.unmatched_brand %></td>
             <td><%= message.user.present? ? message.user.name : message.senderid %></td>
             <td><%= message.text %></td>
+          <% unless @message_type == 'unrecognised' %>
+            <td><%= message.unmatched_brand? ? 'x' : '' %></td>
+          <% end %>
           </tr>
         <% end %>
       </tbody>
