--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,11 +1,14 @@
 <div class="container" style="margin-top: 70px">
-  <div class="row">
+  <div class="row d-flex justify-content-between bd-highlight mb-3">
     <div class="page-header">
-      <h1>Questions</h1>
+      <h1>Bot Prompts</h1>
     </div>
+    <div class="p-2"><%= link_to 'Go to Inputs & Outputs', contents_path, class: 'btn btn-outline-primary' %></div>
   </div>
+
+
   <div class="row">
-    <%= link_to 'New Question', new_question_path, class: "btn btn-success pull-right" %>
+    <%= paginate @questions %>
     <table class="table">
       <thead>
         <tr>
@@ -27,33 +30,13 @@
         <% end %>
       </tbody>
     </table>
+
+    <%= paginate @questions %>
+
+    <%= link_to 'New Prompt', new_question_path, class: "btn disabled btn-outline-success pull-right" %>
   </div>
   <p>
   </p>
 
-  <div class="row">
-    <div class="page-header">
-      <h1>Other Phrases</h1>
-    </div>
-  </div>
-  <div class="row">
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Title</th>
-          <th>Body</th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @contents.each do |content| %>
-          <tr>
-            <td><%= link_to content.title, edit_content_path(content) %></td>
-            <td><%= link_to content.body, edit_content_path(content) %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
 </div>
 
