--- a/app/views/shows/index.html.erb
+++ b/app/views/shows/index.html.erb
@@ -1,15 +1,18 @@
 <div class="container" style="margin-top: 70px">
+  <p id="notice"><%= notice %></p>
   <div class="row">
-
     <div class="page-header">
       <h1>Shows <small>(<%= @shows.total_count %>)</small></h1>
-      <span class="pull-md-right"><a target="_new" href="http://www.vogue.co.uk/shows">vogue.co.uk/shows</a></span>
     </div>
+  </div>
 
-    <p id="notice"><%= notice %></p>
-
+  <div class="row d-flex justify-content-between bd-highlight mb-3">
     <%= paginate @shows %>
+    <div class="p-2"><a target="_new" href="http://www.vogue.co.uk/shows">vogue.co.uk/shows</a></div>
+  </div>
 
+
+  <div class="row">
     <table class="table">
       <thead>
         <tr>
