--- a/app/views/contents/edit.html.erb
+++ b/app/views/contents/edit.html.erb
@@ -1,12 +1,11 @@
 <div class="container" style="margin-top: 70px">
   <div class="row">
-<div class="page-header">
-  <h1>Editing "<%= @content.title %>"</h1>
-</div>
-</div>
+    <div class="page-header">
+      <h1>Editing Input + Output</h1>
+    </div>
+  </div>
 
-<div class="row">
-<%= render 'form', content: @content %>
-
+  <div class="row">
+    <%= render 'form', content: @content %>
   </div>
 </div>
