--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -27,6 +27,6 @@
       </tbody>
     </table>
     <%= paginate @contents %>
-    <%= link_to 'Add an input/output', new_content_path, class: "btn btn-outline-success pull-right" %>
+    <%= link_to 'New input/output', new_content_path, class: "btn btn-outline-success pull-right" %>
   </div>
 </div>
