--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Content</h1>
-
-<%= render 'form', content: @content %>
-
-<%= link_to 'Back', contents_path %>
+<div class="container" style="margin-top: 70px">
+  <div class="row">
+    <div class="page-header">
+      <h1>New Input + Output</h1>
+    </div>
+  </div>
+  <div class="row">
+    <%= render 'form', content: @content %>
+  </div>
+</div>
