--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,9 +15,9 @@
   </div>
   <div class="col-md-8">
       <h2>Message Logs</h2>
-      <p>How many people have talked to the bot? What messages have we <%= link_to "sent", sent_messages_path %> or <%= link_to "received", messages_path %>? All that info is here.</p>
+      <p>How many people have talked to the bot? What messages have we <%= link_to "sent", messages_path(type: 'sent') %> or <%= link_to "received", messages_path(type: 'incoming') %>? All that info is here.</p>
       <p>
-      <%= link_to "Sent", sent_messages_path, class: "btn btn-secondary", role: "button" %>
-      <%= link_to "Received", sent_messages_path, class: "btn btn-secondary", role: "button" %></p>
+      <%= link_to "Sent", messages_path(type: 'sent'), class: "btn btn-secondary", role: "button" %>
+      <%= link_to "Received", messages_path(type: 'incoming'), class: "btn btn-secondary", role: "button" %></p>
   </div>
 </div>
