--- a/app/views/broadcasts/index.html.erb
+++ b/app/views/broadcasts/index.html.erb
@@ -1,28 +1,36 @@
 <div class="container" style="margin-top: 70px">
-<div class="row">
-<div class="page-header">
-  <h1>Broadcast Messages</h1>
-</div>
+  <div class="row">
+    <div class="page-header">
+      <h1>Broadcast Messages</h1>
+    </div>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Text</th>
-      <th colspan="2"></th>
-    </tr>
-  </thead>
+    <%= link_to 'New Broadcast Message', new_broadcast_path, class: "btn btn-success" %>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Type</th>
+          <th>Content</th>
+          <th>Sent At</th>
+          <th></th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @broadcasts.each do |broadcast| %>
-      <tr>
-        <td><%= link_to broadcast.text, broadcast %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tbody>
+        <% @broadcasts.each do |broadcast| %>
+          <tr>
+            <td><%= link_to broadcast.id, broadcast %></td>
+            <td><%= link_to broadcast.template, broadcast %></td>
+            <td><%= link_to broadcast.content, broadcast.content %></td>
+            <td></td>
+            <td></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
 
-<br>
+    <br>
 
-<%= link_to 'New Broadcast Message', new_broadcast_path %>
-</div>
+    <%= link_to 'New Broadcast Message', new_broadcast_path, class: "btn btn-success" %>
+  </div>
 </div>
