--- a/app/views/broadcasts/new.html.erb
+++ b/app/views/broadcasts/new.html.erb
@@ -1,10 +1,13 @@
 <div class="container" style="margin-top: 70px">
   <div class="row">
-    <h1>New Broadcast Message</h1>
-  </div>
-  <div class="row">
-    <%= render 'form', broadcast: @broadcast %>
+    <div class="page-header">
+      <h1>New Broadcast Message</h1>
+    </div>
   </div>
 
+  <p id="notice"><%= notice %></p>
+
+  <div class="row">
+    <%= render 'form', broadcast: @broadcast %>
   </div>
 </div>
