--- a/app/views/broadcasts/_form.html.erb
+++ b/app/views/broadcasts/_form.html.erb
@@ -11,9 +11,16 @@
     </div>
   <% end %>
 
-  <div class="form-group">
-    <%= f.label :template %>
-    <%= f.select :template, Broadcast::VALID_TEMPLATES, class: "form-control" %>
+  <div class="row">
+    <div class="form-group col-6">
+      <%= f.label :template %>
+      <%= f.select :template, Broadcast::VALID_TEMPLATES, class: "form-control" %>
+    </div>
+    <div class="form-group col-6">
+      <%= f.label :internal_only %>
+      <%= f.check_box :internal_only, class:"form-control", "aria-describedby": "internalHelp" %>
+      <small id="internalHelp" class="form-text text-muted">Note: message will be sent to <%= @internal_recipients.map(&:name) %> only. Good for testing.</small>
+    </div>
   </div>
 
   <div class="form-group col-12">
