--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -1,19 +1,27 @@
-<p id="notice"><%= notice %></p>
+<div class="container" style="margin-top: 70px">
+  <div class="row">
+    <div class="page-header">
+      <h1>Editing Input + Output</h1>
+    </div>
+  </div>
 
-<p>
-  <strong>Title:</strong>
-  <%= @content.title %>
-</p>
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Label:</strong>
-  <%= @content.label %>
-</p>
+  <div class="row">
+    <p>
+    <strong>Title:</strong>
+    <%= @content.title %>
+    </p>
 
-<p>
-  <strong>Body:</strong>
-  <%= @content.body %>
-</p>
+    <p>
+    <strong>Label:</strong>
+    <%= @content.label %>
+    </p>
 
-<%= link_to 'Edit', edit_content_path(@content) %> |
-<%= link_to 'Back', contents_path %>
+    <p>
+    <strong>Body:</strong>
+    <%= @content.body %>
+    </p>
+  </div>
+</div>
+
