Standardized those buttons

--- a/app/views/broadcasts/index.html.erb
+++ b/app/views/broadcasts/index.html.erb
@@ -6,7 +6,7 @@
   </div>
 
   <div class="row">
-    <p><%= link_to 'New Broadcast Message', new_broadcast_path, class: "btn btn-success" %></p>
+    <p><%= link_to 'New Broadcast Message', new_broadcast_path, class: "btn btn-outline-success" %></p>
   </div>
 
   <div class="row">
@@ -36,6 +36,6 @@
 
   </div>
   <div class="row">
-    <p><%= link_to 'New Broadcast Message', new_broadcast_path, class: "btn btn-success" %></p>
+    <p><%= link_to 'New Broadcast Message', new_broadcast_path, class: "btn btn-outline-success" %></p>
   </div>
 </div>
