--- a/app/views/shows/_form.html.erb
+++ b/app/views/shows/_form.html.erb
@@ -91,7 +91,7 @@
   </div>
   <div class="row">
     <div class="col-md-4">
-      <%= f.submit 'Update', class: 'btn btn-primary' %>
+      <%= f.submit 'Update', class: 'btn btn-outline-primary' %>
     </div>
   </div>
 <% end %>
