--- a/app/views/welcome/data.html.erb
+++ b/app/views/welcome/data.html.erb
@@ -4,9 +4,9 @@
     <h1 class="display-3">Data</h1>
     <p>From published articles to runway shows, this is all the data the bot knows about and can use in interacting with users.</p>
 
-    <p><%= link_to "Articles", articles_path, class: "btn btn-sm btn-secondary", role: "button" %>
-    <%= link_to "Brands", brands_path, class: "btn btn-sm btn-secondary", role: "button" %>
-    <%= link_to "Shows", shows_path, class: "btn btn-sm btn-secondary", role: "button" %></p>
+    <p><%= link_to "Articles", articles_path, class: "btn btn-sm btn-outline-secondary", role: "button" %>
+    <%= link_to "Brands", brands_path, class: "btn btn-sm btn-outline-secondary", role: "button" %>
+    <%= link_to "Shows", shows_path, class: "btn btn-sm btn-outline-secondary", role: "button" %></p>
   </div>
 </div>
 
