--- a/app/views/contents/_form.html.erb
+++ b/app/views/contents/_form.html.erb
@@ -24,6 +24,6 @@
   </div>
 
   <div class="form-group">
-    <%= f.submit "Save", class: "btn btn-primary" %>
+    <%= f.submit "Save", class: "btn btn-outline-primary" %>
   </div>
 <% end %>
