--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -53,5 +53,5 @@
 
   <% end %>
 
-  <%= f.submit "Submit", class: "btn btn-primary" %>
+  <%= f.submit "Submit", class: "btn btn-outline-primary" %>
 <% end %>
